# ME_4180

./: .gitignore  README.md  pyproject.toml
docs/: Carter_Dougherty_Final_ME4180.docx  ~$rter_Dougherty_Final_ME4180.docx  ~WRL1313.tmp
src/: animation_test.py  bdsim_test.py  carterd_final_problem_1.py  carterd_final_problem_2.py  carterd_final_problem_2_visualization.py  dynamics_calcs.py  final_gui_elements.py  forward_kinematics.py  gui_elements.py  jacobian_calcs.py  programming_assignment_2.py  programming_assignment_3.py  pyplot_test.py  rtb_torques_test.py  swift_test.py
