[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[project]
name = "robotics_cd"
version = "0.1.0"
requires-python = ">=3.14"

dependencies = [
    "PySide6~=6.11", # GUI framework
    "roboticstoolbox-python", # Peter Corke (the GOAT) tools for python
]


[project.optional-dependencies]

dev = [

]